<resources>
    <string name="app_name">Movies Search</string>

    <string name="search">Найти</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>

    <string name="poster">ПОСТЕР</string>
    <string name="details">О ФИЛЬМЕ</string>
    <string name="rating">Рейтинг IMDB:</string>
    <string name="year">Год:</string>
    <string name="country">Страна:</string>
    <string name="genre">Жанр:</string>
    <string name="director">Режиссёр:</string>
    <string name="writer">Сценарист:</string>
    <string name="cast">В ролях:</string>
    <string name="plot">Сюжет:</string>
    <string name="request">Введите запрос...</string>
    <string name="version">Разработчик\nвообще\nкрасавчик</string>

</resources>